Add compile-time null safety with JSpecify 1.0 + NullAway (PLAN-0002)
Adds Error Prone as compiler plugin host for NullAway, which enforces
null-safety in OnlyNullMarked mode. Every package gets @NullMarked via
package-info.java, enforced by a new ArchUnit rule. Updates all project
rules, agents, scaffolding, and documentation to propagate the contract.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>